decorated_channel_name: Fix icon-text spacing and alignment issues.
The `decorated_channel_name.hbs` template had a space character which
conflicted with the padding between the channel privacy icon and the
channel name. This resulted in double spacing in some cases such as the
modal title, where the decorated channel name was being used inline
with prefixing text.

This commit removes the extra space character from the template, and
works on simplifying and unifying the spacing between the privacy icon
and the channel name across the web UI.

The `decorated_channel_name.hbs` template now contains an boolean
parameter — `inline_with_text`. When set to TRUE, the decorated channel
name is rendered as an inline component ensuring that it flows well
with the surrounding text. Otherwise, it is rendered as a flex component
for usage in components such as the dropdown lists and typeaheads.

This commit also adds the relevant class to the channel privacy type
icon to ensure that icon color updates successfully on live channel
color change from the UI.

Fixes #36987.

--- a/web/styles/compose.css
+++ b/web/styles/compose.css
@@ -1763,29 +1763,24 @@ textarea.new_message_textarea {
            surrounding negative space. */
         /* 7px at 20px/1em; 4px at 20px/1em. */
         grid-template:
-            "lefthand-offset privacy-icon privacy-icon-gap channel-name righthand-offset" auto / 0.35em [select-label-start] auto 0.2em minmax(
-                0,
-                1fr
+            "lefthand-offset privacy-icon privacy-icon-gap channel-name righthand-offset" auto
+            / 0.35em [select-label-start] auto var(
+                --dropdown-list-item-label-icon-gap
             )
-            [select-label-end]
-            0.35em;
+            minmax(0, 1fr) [select-label-end] 0.35em;
+
+        .decorated-channel-name-wrapper {
+            display: grid;
+            grid-area: select-label;
+            grid-template-columns: subgrid;
+            gap: 0;
+        }
 
         .channel-privacy-type-icon {
             grid-area: privacy-icon;
-            place-self: center;
-            font-size: 0.95em; /* 19px at 20px/1em */
-            margin-top: -0.0579em; /* Eyeball work; 1.1px at 19px/1em */
-            color: var(--privacy-icon-color-original);
-            /* Eliminate inherited component styles. */
-            position: static;
-            padding: 0;
-            width: 1em;
-            height: 1em;
 
-            &.zulip-icon-lock {
-                /* The lock looks better centered without
-                   a negative margin-top adjustment. */
-                margin-top: 0;
+            .zulip-icon {
+                color: var(--privacy-icon-color-original);
             }
         }
 
